global_components/ActivityCard/ActivityCard.module.scss
@import 'styles/Variables';

.wrapper {
  display: grid;
  grid-template-columns: 1fr auto;
  background-color: $white;
  border: $border;
  border-radius: $border-radius;

  .content {
    display: grid;
    grid-template-columns: auto 1fr;
    align-items: center;
    align-content: center;
    gap: $spacing3;
    padding: $spacing4 $spacing4;

    .icon {
      background-color: $green;
      color: $white;
      width: 40px;
      height: 40px;
      display: grid;
      justify-content: center;
      align-items: center;
      border-radius: 100%;
      font-size: $font-large;
    }

    .info {
      display: grid;
      p {
        font-size: $font-small;
      }
    }
  }

  .bar {
    width: 15px;
    height: 100%;
    background-color: $green;
    border-left: $border;
    transition: 0.2s;
  }

  &.selected {
    .bar {
      background-color: $green-dark;
    }
  }

  &.penalty {
    .bar,
    .icon {
      background-color: $red;
    }

    &.selected {
      .bar {
        background-color: $red-dark;
      }
    }
  }
}

